module/core/derive_tools/tests/inc/index_mut/compiletime/struct_unit.stderr
error: proc-macro derive panicked
 --> tests/inc/index_mut/compiletime/struct_unit.rs:3:12
  |
3 | #[ derive( IndexMut ) ]
  |            ^^^^^^^^
  |
  = help: message: not implemented: IndexMut not implemented for Unit
