module/core/derive_tools/tests/inc/index_mut/compiletime/struct_unit.rs
use derive_tools::IndexMut;

#[ derive( IndexMut ) ] 
struct StructUnit;

fn main()
{
  
}
